# python_web_hw7

./: config.ini  create_bd_alembic.py  create_db.py  fill_data.py  my_select.py  pyproject.toml  seed.py
config/: db.py  models.py
migration/: env.py
migration/versions/: 51999e325b86_init.py
